<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/background">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/btnHome_Des"
        android:id="@+id/btnHome"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_marginTop="40dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/itemBottom1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/buttonCustom"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/ic_custom"
                android:contentDescription="@string/imvCustomDes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvCustom"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemBottom2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/itemBottom1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/buttonLayout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/ic_layout"
                android:contentDescription="@string/imvLayoutDes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvLayout"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf" />

        <LinearLayout
            android:id="@+id/itemBottom3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/itemBottom4"
            android:gravity="center">

            <ImageButton
                android:id="@+id/buttonText"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/ic_text"
                android:contentDescription="@string/imvTextDes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvText"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemBottom4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/buttonDraw"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/ic_draw"
                android:contentDescription="@string/imvDrawDes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvDraw"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>